add validation in proto file with validateproto

--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -8,3 +8,8 @@ plugins:
     out: src/protos
     opt:
       - paths=source_relative
+managed:
+  enabled: true
+  disable:
+    - file_option: go_package
+      module: buf.build/bufbuild/protovalidate
