add registry to test connection

--- a/.woodpecker/deploy-to-dev.yaml
+++ b/.woodpecker/deploy-to-dev.yaml
@@ -5,7 +5,11 @@ steps:
   - name: Build the image
     image: woodpeckerci/plugin-docker-buildx:6.0.2
     privileged: true
+
     settings:
-      dockerfile: Dockerfile
       dry_run: True
+
       repo: mist-project/mist-backend
+      dockerfile: Dockerfile
+
+      registry: registry.mist-project.app
