--- a/.woodpecker/deploy-tenant.yml
+++ b/.woodpecker/deploy-tenant.yml
@@ -59,7 +59,7 @@ steps:
       - |
         ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i ansible/inventory/hosts.ini \
           ansible/playbooks/deploy.yml \
-          --extra-vars "ansible_ssh_private_key_file=$TENANT_PRIVATE_SSH_KEY_FILE" \
+          --extra-vars "ansible_ssh_private_key_file=key.pem" \
           --extra-vars "ansible_user=$TENANT_USERNAME" \
   # when:
   # - evaluate: 'DEPLOY_DEV == "true"'
